policy/l4_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Allow spaceships to land on the deathstar"
metadata:
  name: "deathstar-landing"
spec:
  endpointSelector:
    matchLabels:
      class: deathstar
      org: empire
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
