policy/l7_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Deathstar Layer 7 policies"
metadata:
  name: "deathstar-l7"
spec:
  endpointSelector:
    matchLabels:
      class: deathstar
      org: empire
  ingress:
  - fromEndpoints:
    - matchLabels:
    class: spaceship
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/v1/request-landing$"
        - method: "PUT"
          path: "/v1/exhaust-port$"
          headers:
          - "X-Has-Force: True"
